--- a/scss/_mobileProjects.scss
+++ b/scss/_mobileProjects.scss
@@ -5,7 +5,6 @@
     .wrapper {
         @include flexVer;
         width: $wrapper-width;
-        // width: 82%;
         margin: 0 auto;
         max-width: 1140px;
     }
@@ -46,7 +45,6 @@
 }
 
 .mobileProjects--projectBox {
-    // min-width: 250px;
     max-width: 900px;
     margin-bottom: 8rem;
 
@@ -110,9 +108,6 @@
             @include flexHor;
             flex: 1 2 auto;
         }
-        a:hover {
-            background-color: $red;
-        }
     }
 }
 
@@ -133,5 +128,16 @@
     
     @include media(">tablet") {
         margin: 0rem 2rem;
+    }
+}
+
+.redBtn {
+    background-color: $red !important;
+
+}
+
+.hoverWhite {
+    &:hover {
+        border: 2px solid white;
     }
 }
